dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - dashboard.k8s.kuops.com
    secretName: kubernetes-dashboard-certs
  rules:
  - host: dashboard.k8s.kuops.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
